Fix : module java.base does not opens java.lang to unnamed module
Signed-off-by: Rushil <rushil.v@ibm.com>